fix ripple and heart alignment

--- a/src/heart/index.styl
+++ b/src/heart/index.styl
@@ -21,8 +21,8 @@
   transform: rotate(45deg)
   transform-origin: prec-round(size * .5) prec-round(size * .5)
   div
-    top: prec-round(size * .4)
-    left: prec-round(size * .4)
+    top: prec-round(size * .35)
+    left: prec-round(size * .35)
     position: absolute
     width: prec-round(size * .4)
     height: prec-round(size * .4)
